--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/project?serverTimezone=UTC&CharacterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&CharacterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=zerobase
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
+openweathermap.key=7791e8d8269989ac5c22959223b7b311
