--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 openweathermap.key=7791e8d8269989ac5c22959223b7b311
 logging.config=classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
